<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.QuestionsFragment">

    <LinearLayout
        android:id="@+id/layout_questions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0_dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:id="@+id/tv_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_2_dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/questions"
            android:textColor="@android:color/background_dark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dynamic_views_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_2_dp"
                android:paddingBottom="@dimen/padding_4_dp"
                android:paddingRight="@dimen/padding_4_dp"
                android:visibility="visible" />
        </ScrollView>

        <FrameLayout
            android:id="@+id/finish_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_30_dp"
                    android:text="@string/you_are_at_the_end_of_the_survey"
                    android:textSize="@dimen/text_size_24_sp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/save_and_exit"
                    android:textAllCaps="false"
                    android:textColor="@color/button_color"
                    android:textSize="@dimen/text_size_20sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/button_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_previous"
                style="@style/customButtonStyle"
                android:paddingLeft="@dimen/padding_30_dp"
                android:gravity="left|center"
                android:text="@string/previous"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_next"
                style="@style/customButtonStyle"
                android:gravity="right|center"
                android:paddingRight="@dimen/padding_30_dp"
                android:text="@string/next" />
        </LinearLayout>
</LinearLayout>